CHANGELOG
2010-08-11
-Fixed long standing IE Bug. Turns out that IE fails to handle unicode data in the Content-disposition header so this value is now urlencoded ensuring compatibility.

2010-08-10
-Added check for CustomPerms IP protection on login

2010-07-30
-Add collage stats to user profiles

2010-07-04
-Updated sphinx.conf

2010-06-26
-Fixed IP bans and added to public repo
-Added catch for missing system 'host' command
-Logged in users can't hit register.php
-Fix in URL_REGEX to allow URLs of the form http://foo.com/

2010-06-09
-Delete torrent files when torrent is deleted

2010-06-04
-User proper names on bookmark/notify links if a group is already bookmarked or in the notifications

2010-05-21
-Sortable invitee list

2010-05-16
-Escape tag links on user torrent pages

2010-05-12
-Make the "view tags" button change to "hide tags" if tags are shown
-Make editing upload/download amounts work on 32bit systems
-Fix a typo in class_cache, not major
-Add default values to schedule table

2010-05-09
-Add catchup link to subscriptions page

2010-05-05
-Move $Classes fetching code to somewhere globally accessible so that schedule can fetch it

2010-05-03
-Fixed bug in 32bit parser that would allow clients to set private=0

2010-05-01
-Add preview functionality to thread creation page

2010-04-30
-Fix various subscription bugs

2010-04-29
-Properly update cache and database when a forum post is removed

2010-04-28
-Alias IDs now show next to artists in the artist box
-Users with an infinite ratio now get promoted along with those who have a
ratio of 1.05 or higher

2010-04-26
-Fixed bug where snatchlists were not visible to other users at paranoia level
1 (should be 2 or higher)

2010-04-19
-Add requests to sphinx.conf

2010-04-18
-Fix request sorting

2010-04-15
-Added clickable staff notes

2010-04-14
-Add stylesheet and avatar search to advanced user search

2010-04-13
-Require authorization to manually run schedule