@@ -6,13 +6,22 @@ $ConvID = $_POST['convid'];
 $ReceiverID = $_POST['receiverid'];
 if(!is_number($ConvID) || !is_number($ReceiverID)) { error(404); }
 if(!check_perms('users_mod') || !isset($StaffIDs[$ReceiverID])) { error(403); }
+$DB->query("SELECT ConvID FROM pm_conversations_users WHERE UserID='$UserID' AND InInbox='1' AND (ForwardedTo=0 OR ForwardedTo=UserID) AND ConvID='$ConvID'");
+if($DB->record_count() == 0) { error(403); }
 
-$DB->query("SELECT DISTINCT UserID FROM pm_conversations_users WHERE (UserID='$UserID' OR UserID='$ReceiverID') AND ConvID='$ConvID'");
-if($DB->record_count() != 1) { error(0); }
-
-$DB->query("UPDATE pm_conversations_users SET
-	UserID='$ReceiverID', UnRead='1'
-	WHERE ConvID='$ConvID' AND UserID='$UserID'");
-$Cache->delete_value('inbox_new_'.$ReceiverID);
-header('Location: inbox.php');
+$DB->query("SELECT ConvID FROM pm_conversations_users WHERE UserID='$ReceiverID' AND (ForwardedTo = 0 OR ForwardedTo = UserID) AND InInbox='1' AND ConvID='$ConvID'");
+if($DB->record_count() == 0) {
+	$DB->query("INSERT IGNORE INTO pm_conversations_users
+		(UserID, ConvID, InInbox, InSentbox, ReceivedDate)
+		VALUES ('$ReceiverID', '$ConvID', '1', '0', NOW())
+		ON DUPLICATE KEY UPDATE ForwardedTo = 0, UnRead = 1");
+	$DB->query("UPDATE pm_conversations_users SET ForwardedTo='$ReceiverID' WHERE ConvID='$ConvID' AND UserID='$UserID'");
+	$Cache->delete_value('inbox_new_'.$ReceiverID);
+	save_message("PM successfully forwarded to $StaffIDs[$ReceiverID].");
+	header('Location: inbox.php');
+} else {
+	error_message("$StaffIDs[$ReceiverID] already has this conversation in their inbox.");
+	header('Location: inbox.php?action=viewconv&id='.$ConvID);
+}
+//show_footer();
 ?>
