@@ -2,7 +2,7 @@
 authorize();
 
 
-if(!isset($_POST['toid']) || !is_number($_POST['toid'])) { error(404); }
+if(empty($_POST['toid'])) { error(404); }
 
 if(!empty($LoggedUser['DisablePM']) && !isset($StaffIDs[$_POST['toid']])) {
 	error(403);
@@ -12,15 +12,21 @@ if(!empty($LoggedUser['DisablePM']) && !isset($StaffIDs[$_POST['toid']])) {
 if (isset($_POST['convid']) && is_number($_POST['convid'])) {
 	$ConvID = $_POST['convid'];
 	$Subject='';
+	$ToID = explode(',', $_POST['toid']);
 	$DB->query("SELECT UserID FROM pm_conversations_users WHERE UserID='$LoggedUser[ID]' AND ConvID='$ConvID'");
 	if($DB->record_count() == 0) {
 		error(403);
 	}
 } else {
 	$ConvID='';
+	if(!is_number($_POST['toid'])) {
+		$Err = "This recipient does not exist.";
+	} else {
+		$ToID = $_POST['toid'];
+	}
 	$Subject = trim($_POST['subject']);
 	if (empty($Subject)) {
-		$Err = "You can't send a message without a subject";
+		$Err = "You can't send a message without a subject.";
 	}
 }
 $Body = trim($_POST['body']);
@@ -37,7 +43,7 @@ if(!empty($Err)) {
 	die();
 }
 
-$ConvID = send_pm($_POST['toid'],$LoggedUser['ID'],db_string($Subject),db_string($Body),$ConvID);
+$ConvID = send_pm($ToID,$LoggedUser['ID'],db_string($Subject),db_string($Body),$ConvID);
 
 header('Location: inbox.php');
 ?>
