@@ -260,7 +260,7 @@ if ($Invites!=$Cur['Invites'] && check_perms('users_edit_invites')) {
 }
 
 if ($Warned == 1 && $Cur['Warned']=='0000-00-00 00:00:00' && check_perms('users_warn')) {
-	send_pm($UserID,0,db_string('You have received a warning'),db_string("You have been warned for $WarnLength week(s) by $LoggedUser[Username]. The reason given was: $WarnReason"));
+	send_pm($UserID,0,db_string('You have received a warning'),db_string("You have been [url=http://".NONSSL_SITE_URL."/wiki.php?action=article&id=218]warned for $WarnLength week(s)[/url] by $LoggedUser[Username]. The reason given was: $WarnReason"));
 	$UpdateSet[]="Warned='".sqltime()."' + INTERVAL $WarnLength WEEK";
 	$Msg = "warned for $WarnLength week(s)";
 	if ($WarnReason) { $Msg.=" for $WarnReason"; }
